--- a/backup/printer.cfg
+++ b/backup/printer.cfg
@@ -57,6 +57,11 @@ x_offset: -40
 y_offset: -9
 #z_offset: 0
 probe_with_touch_mode: false
+samples: 3                    #new
+#samples_result: median       #new
+sample_retract_dist: 5.0      #new
+samples_tolerance: 0.035      #new
+samples_tolerance_retries: 15 #new
 
 [safe_z_home]
 home_xy_position: 45.5,117.5 # Change coordinates to the center of your print bed
@@ -64,11 +69,11 @@ z_hop: 10                 # Move up 10mm
 z_hop_speed: 5
 
 [bed_mesh]
-speed: 80
+speed: 100
 horizontal_move_z: 5
 mesh_min: 20,13
 mesh_max: 195,212
-probe_count: 5,5
+probe_count: 6,6
 mesh_pps: 2,2
 fade_start: 1
 fade_end: 10
@@ -189,42 +194,43 @@ gcode:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 25.927
-#*# pid_ki = 1.465
-#*# pid_kd = 114.727
+#*# pid_kp = 26.052
+#*# pid_ki = 1.378
+#*# pid_kd = 123.098
 #*#
 #*# [bltouch]
-#*# z_offset = 1.660
+#*# z_offset = 1.755
 #*#
-#*# [bed_mesh mesh1]
+#*# [bed_mesh mesh_hot_old]
 #*# version = 1
 #*# points =
-#*# 	-0.030000, -0.112500, -0.162500, -0.117500, -0.060000
-#*# 	-0.022500, -0.062500, -0.007500, 0.070000, 0.050000
-#*# 	-0.052500, -0.017500, 0.037500, 0.075000, 0.102500
-#*# 	0.010000, -0.022500, 0.077500, 0.127500, 0.120000
-#*# 	-0.002500, -0.010000, 0.067500, 0.090000, 0.012500
+#*# 	-0.070000, -0.102500, -0.125000, -0.132500, -0.175000
+#*# 	-0.002500, -0.095000, -0.130000, -0.127500, -0.192500
+#*# 	-0.112500, -0.120000, -0.155000, -0.165000, -0.097500
+#*# 	-0.072500, -0.112500, -0.137500, -0.100000, -0.102500
+#*# 	-0.020000, -0.107500, -0.095000, -0.110000, -0.102500
+#*# min_x = 20.0
+#*# max_x = 195.0
+#*# min_y = 13.0
+#*# max_y = 212.0
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 20.0
-#*# max_x = 195.0
-#*# min_y = 13.0
-#*# max_y = 212.0
 #*#
 #*# [bed_mesh mesh_hot]
 #*# version = 1
 #*# points =
-#*# 	-0.075000, -0.045000, -0.040000, -0.015000, -0.135000
-#*# 	0.030000, -0.035000, -0.062500, -0.045000, -0.072500
-#*# 	-0.037500, -0.127500, -0.160000, -0.070000, -0.035000
-#*# 	-0.062500, -0.150000, -0.102500, -0.102500, -0.165000
-#*# 	-0.155000, -0.147500, -0.117500, -0.167500, -0.107500
-#*# x_count = 5
-#*# y_count = 5
+#*# 	  -0.035000, -0.035000, 0.001667, -0.007500, -0.074167, -0.105000
+#*# 	  -0.042500, -0.050000, -0.068333, -0.016667, -0.064167, -0.092500
+#*# 	  -0.008333, -0.044167, -0.105000, -0.073333, -0.038333, -0.046667
+#*# 	  0.031667, -0.041667, -0.087500, -0.076667, -0.061667, -0.032500
+#*# 	  -0.027500, -0.071667, -0.059167, -0.036667, -0.074167, -0.049167
+#*# 	  -0.048333, -0.075000, -0.049167, -0.014167, -0.010833, -0.050000
+#*# x_count = 6
+#*# y_count = 6
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
@@ -232,4 +238,24 @@ gcode:
 #*# min_x = 20.0
 #*# max_x = 195.0
 #*# min_y = 13.0
-#*# max_y = 212.0
+#*# max_y = 211.95
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	0.020833, 0.028333, 0.029167, 0.002500, -0.020000, -0.054167
+#*# 	-0.004167, -0.000000, -0.005000, 0.005833, -0.039167, -0.044167
+#*# 	0.016667, 0.005000, -0.060000, -0.033333, -0.040000, -0.005833
+#*# 	0.006667, -0.002500, -0.071667, -0.026667, -0.003333, 0.020000
+#*# 	-0.005000, -0.021667, -0.040000, -0.000000, -0.018333, -0.002500
+#*# 	-0.044167, -0.036667, -0.009167, 0.010000, 0.021667, -0.029167
+#*# x_count = 6
+#*# y_count = 6
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 20.0
+#*# max_x = 195.0
+#*# min_y = 13.0
+#*# max_y = 211.95
